<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.sharangirdhani.homework05.MainActivity">

        <TextView
            android:id="@+id/textViewSearchLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/searchLabel"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextMusicTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewSearchLabel"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextMusicTrack"
            android:layout_centerHorizontal="true"
            android:text="@string/searchButton" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonSearch"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="44dp"
            android:text="@string/favouritesLabel"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewMainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"></android.support.v7.widget.RecyclerView>

    </RelativeLayout>
</layout>
